<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/nav_about"
            android:title="@string/About"
            android:iconTint="@android:color/white"
            android:enabled="true"/>

        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/nav_order"
            android:title="@string/my_orders"
            android:iconTint="@android:color/white"
            app:showAsAction="never"
            android:enabled="true"/>

        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            android:iconTint="@android:color/white"
            android:enabled="true"
            app:showAsAction="never"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_person_add"
            android:title="@string/settings"
            android:iconTint="@android:color/white"
            android:enabled="true"
            app:showAsAction="never"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout"
            android:iconTint="@android:color/white"
            android:enabled="true"
            app:showAsAction="never"/>

    </group>
</menu>