<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ic_launcher_background"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/please_write_your_shipment_details"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txt_order"
            android:layout_width="370dp"
            android:layout_height="39dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="25dp"
            android:text="@string/order_number"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="invisible"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/shippment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-25dp"
            android:layout_marginRight="20dp"
            android:textColorHint="@color/white"
            android:hint="@string/your_name"

            android:minHeight="48dp" />

        <EditText
            android:id="@+id/shippment_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="-3dp"
            android:layout_marginRight="20dp"
            android:hint="@string/your_phone_number"
            android:textColorHint="@color/white"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/shippment_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="21dp"
            android:layout_marginRight="20dp"
            android:hint="@string/your_home_addresss"
            android:textColorHint="@color/white"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/menutitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="10dp"
            android:text="@string/menu_ptice_qty"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/pname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

        <TextView
            android:id="@+id/city_text"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="25dp"
            android:text="@string/city"
            android:paddingTop="15dp"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/city_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:dropDownSelector="@color/colorPrimaryDark"
            android:padding="10dp"
            android:popupBackground="@color/ic_launcher_background"
            android:popupElevation="10dp"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:paddingTop="15dp"
            android:text="@string/area"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/area_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:dropDownSelector="@color/colorPrimaryDark"
            android:padding="10dp"
            android:popupBackground="@color/ic_launcher_background"
            android:popupElevation="10dp"
            android:scrollbarStyle="insideInset"
            tools:ignore="SpeakableTextPresentCheck" />
        <TextView
            android:id="@+id/paymenttxt3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="22dp"
            android:layout_marginStart="10dp"
            android:paddingTop="15dp"
            android:layout_marginEnd="20dp"
            android:text="@string/p_mode"
            android:gravity="right"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/payment_spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:dropDownSelector="@color/colorPrimaryDark"
            android:padding="10dp"
            android:popupBackground="@color/ic_launcher_background"
            android:popupElevation="10dp"
            android:scrollbarStyle="insideInset"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/back_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@android:drawable/alert_dark_frame"
                android:padding="10dp"
                android:text="@string/back"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/confirm_final_order_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@android:drawable/alert_dark_frame"
                android:padding="10dp"
                android:text="@string/confirm"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>