<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/accent_500"
    tools:context=".ResetPassword">


    <com.rey.material.widget.Button
        android:id="@+id/submit"
        android:layout_width="195dp"
        android:layout_height="59dp"
        android:layout_marginBottom="52dp"
        android:text="@string/submit"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/textview_reset"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="349dp"
        android:layout_height="53dp"
        android:layout_marginBottom="148dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_new_password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="350dp"
        android:layout_height="59dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/write_mobile_number"
        android:inputType="phone"
        android:textColorHint="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>