<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="3dp"
    android:elevation="10dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:orientation="vertical"
        android:padding="15dp">


        <LinearLayout
            android:layout_width="383dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/order_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="order number"
                    android:textColor="#FDECEC"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="Name"
                    android:textColor="#FDECEC"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:text="Phone Number"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/menutitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/order_phone_number"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="25dp"
                    android:text="@string/menu_ptice_qty"
                    android:textColor="@color/colorSecondary"
                    android:textSize="12sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/pinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/product_details"
                    android:textColor="#05E6EF"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/order_total_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/total_price"
                    android:textColor="#F8E5E5"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/payment_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/payment_mode"
                    android:textColor="#F8E5E5"
                    android:textSize="12sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/order_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/date_and_time"
                    android:textColor="#F4EBEB"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/order_address_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/address_user_order"
                    android:textColor="#FBF1F1"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/order_status_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/order_address_city"
                    android:layout_alignParentEnd="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/order_status_user"
                    android:textColor="#0CB619"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/order_status_title"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:paddingBottom="5dp"
                    android:src="@drawable/input_design"
                    android:text="@string/order_status"
                    android:textColor="#FDF7F7"
                    android:textSize="12sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/img1"
                    android:layout_width="70dp"
                    android:layout_height="67dp"
                    android:layout_gravity="center"
                    android:foregroundGravity=""
                    android:src="@drawable/nav_manu"
                    app:civ_border_color="#FF000000"
                    app:civ_border_width="2dp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>